field_with_errors alignment fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -195,9 +195,8 @@ input, textarea, select, .uneditable-input {
 }
 
 .field_with_errors {
-  @extend .control-group;
-  @extend .error;
- }
+  @extend .control-group.error;
+}
 
  /* users index */
 
